--- a/Mohaeng/Mohaeng/Sources/Cells/FeedCollectionView/PlusButtonCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/FeedCollectionView/PlusButtonCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PlusButtonCollectionViewCell" customModule="Journey" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PlusButtonCollectionViewCell" customModule="Mohaeng" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="36" height="34"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
