--- a/Mohaeng/Mohaeng/Resources/Storyboards/Feed/Mood.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Feed/Mood.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="anl-Gk-QUI">
-                                <rect key="frame" x="0.0" y="269.33333333333331" width="428" height="200"/>
+                                <rect key="frame" x="0.0" y="265.66666666666669" width="428" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="Imh-pU-ady"/>
@@ -47,25 +47,25 @@
                                 </cells>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아라아랑의 오늘의 기분은 어땠어?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vac-4s-T5a">
-                                <rect key="frame" x="24" y="126.00000000000001" width="297" height="25.666666666666671"/>
+                                <rect key="frame" x="24" y="126" width="328.66666666666669" height="22"/>
                                 <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="22"/>
                                 <color key="textColor" name="Black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘을 대표하는 기분을 선택해줘" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIF-Pz-jlR">
-                                <rect key="frame" x="24" y="171.66666666666666" width="168.66666666666666" height="17.666666666666657"/>
+                                <rect key="frame" x="24" y="168" width="168.66666666666666" height="17.666666666666657"/>
                                 <fontDescription key="fontDescription" name="NotoSansKannada-Regular" family="Noto Sans Kannada" pointSize="13"/>
                                 <color key="textColor" name="Grey3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="기분 좋아!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zdb-Hz-1Np">
-                                <rect key="frame" x="180" y="517.33333333333337" width="68.333333333333314" height="20.333333333333371"/>
+                                <rect key="frame" x="180" y="513.66666666666663" width="68.333333333333314" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QZK-eQ-VNW">
-                                <rect key="frame" x="166" y="553.66666666666663" width="96" height="10"/>
+                                <rect key="frame" x="166" y="550" width="96" height="10"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="50i-nK-fJQ">
                                         <rect key="frame" x="0.0" y="0.0" width="66" height="10"/>
@@ -138,6 +138,7 @@
                         <outlet property="moodLabel" destination="zdb-Hz-1Np" id="ySk-8W-LLY"/>
                         <outlet property="moodTodayLabel" destination="vac-4s-T5a" id="pHU-M7-7jJ"/>
                         <outlet property="nextButton" destination="I0H-tb-39N" id="l9n-hZ-pBO"/>
+                        <outlet property="nextButtonHeightConstraint" destination="JQy-dg-dyj" id="V6S-wu-jaa"/>
                         <outlet property="pageStackView" destination="QZK-eQ-VNW" id="Fyo-1Q-zIv"/>
                         <outlet property="secondDot" destination="Pp9-Xf-diT" id="r6q-4O-GX5"/>
                         <outlet property="secondDotWidth" destination="OeK-de-aRN" id="v4e-wq-Nfx"/>
