--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/Login.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/Login.storyboard
@@ -79,6 +79,9 @@
                                         <state key="normal" title="Apple로 시작하기" image="appleIcon">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="touchAppleLoginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="V4F-C9-wO4"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVX-bg-Z9w">
                                         <rect key="frame" x="0.0" y="114" width="327" height="1"/>
