--- a/Mohaeng/Mohaeng/Resources/Storyboards/Home/Home.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Home/Home.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hev-nF-z4D">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hev-nF-z4D">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,16 +13,16 @@
         <!--Home View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="Journey" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="Mohaeng" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="ddC-dI-ZRd">
-                                <rect key="frame" x="0.0" y="-56" width="414" height="919"/>
+                                <rect key="frame" x="0.0" y="-12" width="414" height="875"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" image="1Grp" translatesAutoresizingMaskIntoConstraints="NO" id="0cr-Rm-0kr">
-                                <rect key="frame" x="129" y="198.33333333333334" width="305" height="502.66666666666663"/>
+                                <rect key="frame" x="129" y="242.33333333333334" width="305" height="458.66666666666663"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6l-iR-QUJ">
                                 <rect key="frame" x="24" y="749" width="366" height="50"/>
@@ -46,17 +48,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아라아라! 벌써 밤이야! 인증하고 일찍 자자" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqV-sk-UiK">
-                                <rect key="frame" x="24" y="77" width="379" height="57.333333333333343"/>
+                                <rect key="frame" x="24" y="120.99999999999999" width="379" height="57.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfe-49-RBu">
-                                <rect key="frame" x="4" y="198.33333333333334" width="88" height="44"/>
+                                <rect key="frame" x="4" y="242.33333333333337" width="88" height="44"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="H7M-wz-W4e">
-                                <rect key="frame" x="4" y="198.33333333333334" width="88" height="44"/>
+                                <rect key="frame" x="4" y="242.33333333333337" width="88" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="88" id="Irb-vJ-JP4"/>
                                     <constraint firstAttribute="height" constant="44" id="x06-Zk-gEf"/>
@@ -65,7 +67,7 @@
                                 <color key="trackTintColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nJu-n7-rBq">
-                                <rect key="frame" x="34.333333333333336" y="208" width="27.333333333333336" height="25"/>
+                                <rect key="frame" x="34.333333333333336" y="252" width="27.333333333333336" height="25"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Staricn" translatesAutoresizingMaskIntoConstraints="NO" id="Oc5-PJ-7iM">
                                         <rect key="frame" x="0.0" y="0.0" width="27.333333333333332" height="13"/>
@@ -80,11 +82,11 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohc-G9-CHG">
-                                <rect key="frame" x="24" y="286.33333333333331" width="44" height="44"/>
+                                <rect key="frame" x="24" y="330.33333333333331" width="44" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-L7-pM4">
-                                <rect key="frame" x="24" y="286.33333333333331" width="44" height="44"/>
+                                <rect key="frame" x="24" y="330.33333333333331" width="44" height="44"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="closetIcn" translatesAutoresizingMaskIntoConstraints="NO" id="Skn-EI-MHL">
                                         <rect key="frame" x="6.3333333333333339" y="6.6666666666666874" width="31.333333333333329" height="30.666666666666671"/>
@@ -159,11 +161,13 @@
         <!--홈-->
         <scene sceneID="lmj-xh-HBQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="Hev-nF-z4D" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hev-nF-z4D" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="홈" image="homeIcon" id="QLy-Nz-Kmc"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pxm-te-vy3">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="Black"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -181,6 +185,9 @@
         <image name="closetIcn" width="31.333333969116211" height="30.666666030883789"/>
         <image name="homeIcon" width="28" height="28"/>
         <image name="sample" width="375" height="731"/>
+        <namedColor name="Black">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
