[#376] 버튼 폰트 굵기 변경

--- a/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
+++ b/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
@@ -70,7 +70,7 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="48" id="tqW-3o-mrW"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                    <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Medium" family="Spoqa Han Sans Neo" pointSize="14"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="완벽하게 성공 🤗"/>
                                     <connections>
