--- a/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
+++ b/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,9 +44,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODf-3D-Kkl">
-                            <rect key="frame" x="212" y="10" width="37" height="26.5"/>
+                            <rect key="frame" x="205" y="10" width="44" height="44"/>
                             <color key="tintColor" name="Black"/>
-                            <buttonConfiguration key="configuration" style="plain" image="yearPickerX" title=""/>
+                            <state key="normal" image="gnbIconX"/>
                             <connections>
                                 <action selector="touchCloseButton:" destination="-1" eventType="touchUpInside" id="VhL-T2-36d"/>
                             </connections>
@@ -137,8 +136,8 @@
         </view>
     </objects>
     <resources>
+        <image name="gnbIconX" width="44" height="44"/>
         <image name="okImg" width="125" height="88"/>
-        <image name="yearPickerX" width="13" height="12.5"/>
         <namedColor name="Black">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
